# Goliath-Engine_standalone

./: CMakeLists.txt  README.md  main.cpp
header/opengl/: TextRendering.h  version.h
resources/: generate.sh  resources.qrc
resources/shader/shading/: depth.fsh  depth.vsh  lookDev.fsh  normal.fsh  normal.vsh  rendered.fsh  rendered.vsh  solid.fsh  vertexGroup.vsh
